# kotlin-dialect

./: .gitignore  CHANGELOG.md  README.md  kd.yml  klin.yml
example/helloworld/: copy-sdk.txt  kd.yml
example/helloworld/sdk-mac-x64/hw/: build.gradle.kts
example/helloworld/util/: build-mac-x64  gen-kd  launch-mac-x64
example/helloworld/util/step/: buildDesktop  buildDesktopSDK  copyDesktopSDK
example/helloworld/ver-mac-x64/: CMakeLists.txt
example/helloworld/ver-mac-x64/src/: App.cpp  App.h  AppMain.cpp  AppView.qml  KT.cpp  KT.h  VM.cpp  VM.h  _main.cpp  main.cpp  main.h
example/ver-android/app/: build.gradle.kts
example/ver-android/app/src/main/kotlin/org/opengamestudio/: MainActivity.kt  VM.kt  mainUI.kt  other-android.kt  other.kt
example/ver-android/gradle/: libs.versions.toml
klin/: kd.yml
klin/ver-nodejs/: gradle.properties  settings.gradle.kts
klin/ver-nodejs/app/: build.gradle.kts
klin/ver-nodejs/app/src/commonMain/kotlin/org/opengamestudio/: KDContext.kt  KDController.kt  appFun.kt  cpp.kt  (+12 more)
klin/ver-nodejs/app/src/jsMain/resources/: app.js
klin/ver-nodejs/gradle/: libs.versions.toml
src/: KDContext.kt  KDController.kt  KDControllerExtensions.swift  registerOneliners.kt  registerOneliners.swift
test/: kd.kt  kd.yml  main.kt  make  tests.kt
util/: build-klin  debug-klin  dist-klin  do-tmux  other  run-klin-dbg  run-tests  update-version
util/step/: buildKlin  buildTest  convertKDFilesToB64  distributeKlin  embedKDFiles  embedSrcFiles  generateKOMDebugKD  generateKlinDebugKD  generateKlinKD  generateTestKD  runTest  stripTestKDJS
(+8 files in other folders)
